stylesheets/main.css
/* main.css */
html, body, header, nav, h1, h2, h3, h4, h5, h6, p, div, ul, ol, li {
    padding: 0;
    border: 0;
    margin: 0;
    font: inherit;
    font-size: 100%;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
header {
    background: #252525;
    color: #eee;
    padding: 2% 0 0 0;
    width: 100%;
    /* background: color url repeat pos1 pos2;*/
    /*position:fixed;
    */
    display: block;
}
header h1 {
    font-size: 300%;
    font-weight: normal;
    margin: 0 auto 2.5% auto;
    width: 50%;
    border: none;
}
header .tagline, header .contact {
    font-size: 150%;
    margin: 0 auto 1% auto;
    width: 50%;
    font-weight: 100;
}
header .tagline strong,header .tagline em{
    font-weight: 400;
}
body {
    background: #eee;
}
article {
    margin-bottom: 2.5%;
}
aside {
    float: left;
    position: fixed;
    width: 20%;
    margin: 0 2.5%;
}
aside p {
    float: left;
    margin-right: 1%;
    margin-bottom: 1%;
    padding: 0 1em 0 1em;
    border: 0.2em solid #9f425f;
    border-radius: 0.5em; 
    color: #eee;
    background: #5f021f;
}
aside h1 {
    border: none;
}
h1 {
    border-bottom: 0.1em solid #9f425f;
    font-size: 150%;
    font-weight: 400;
    margin-bottom: 1%;
}
p {
    line-height: 2em;
}


nav {
    background: #5f021f;
    border-bottom: .2em solid #9f425f;
}
nav div {
    margin: 0 auto 0 auto;
    width: 50%;
    font-size: 125%;
}
nav div a {
    margin: 0 0 0 1%;
}
main {
    display: block;
    width: auto;
    margin: 1% auto 1% auto;
    width: 50%;   
}
footer {
    font-size: 150%;
    margin: 0 auto 0 auto;
    font-weight: 100;
    text-align: center;
    background: #252525;
    color: #eee;
    
}
footer p {
    padding: 1em;
}
footer div {
    height: 1em;
    background: #5f021f;
}
li {
    list-style-type: none;
}
a {
    color: #eee;
    font-weight: normal;
    text-decoration: none;
}
a:hover {
    color: #a050a0;
    text-decoration: underline;
}
.contact .item{
    float: right;
}
.contact img {
    height: 1em;
    width: auto;
    padding-right: 1%;
}
.contact a {
    margin-right: 5%;
}
.portfolio article img{
    border: solid #9f425f;
    border-radius: 1em;
    width: 50%;
    min-width: 400px;
}
@media screen and (orientation: portrait) {
    header .tagline, header .contact {
        width: 90%;
        text-align: left;
        padding-bottom: 1%;
    }
    
    header .contact{
        background: #505050;
        width: inherit;
        padding: 1% 0%;
        text-align: center;
        margin: 0 0 0 0;
    }
    nav div {
        width: inherit;
        padding: 1% 0%;
        text-align: center;
    }
    main {
        width: 90%;
    }
    aside {
        width: 90%;
        position: relative;
        float: none;
        margin: 1% auto 12% auto;
    }
    main {
        position: relative;
        float: none;
        margin: 0 auto 0 auto;
    }
    .portfolio article img {
        width: 90%;
    }
}

